// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tabs can use slots label custom tab title 1`] = `
<div class="fect-tabs">
  <header class="fect-tabs__header" role="tablist" aria-orientation="horizontal">
    <div class="fect-tabs__highlight" style="transition-property: opacity;"></div>
  </header>
  <div class="fect-tab" role="tabpanel" tabindex="0">HTML</div>
  <!---->
</div>
`;

exports[`Tabs should be change acitve value when tab trigger 1`] = `
<div class="fect-tabs" modelvalue="0" modelmodifiers="[object Object]">
  <header class="fect-tabs__header" role="tablist" aria-orientation="horizontal">
    <div class="fect-tabs__highlight" style="transition-property: opacity, width, left, top; opacity: 0; width: 0px; left: 0px; height: 0px; top: 0px;"></div>
    <div role="tab" class="fect-tabs__title">HTML</div>
    <div role="tab" class="fect-tabs__title fect-tabs__title--active">JS</div>
  </header>
  <!---->
  <div class="fect-tab" role="tabpanel" tabindex="0">JS</div>
</div>
`;

exports[`Tabs should be disabled all events 1`] = `
<div class="fect-tabs" modelvalue="0" modelmodifiers="[object Object]">
  <header class="fect-tabs__header fect-tabs__header--hide-divider" role="tablist" aria-orientation="horizontal">
    <div class="fect-tabs__highlight" style="transition-property: opacity;"></div>
    <div role="tab" class="fect-tabs__title fect-tabs__title--disabled fect-tabs__title--active">HTML</div>
    <div role="tab" class="fect-tabs__title">JS</div>
  </header>
  <div class="fect-tab" role="tabpanel" tabindex="0">HTML</div>
  <!---->
</div>
`;

exports[`Tabs when user change props active should be reRender 1`] = `
<div class="fect-tabs" modelvalue="0" modelmodifiers="[object Object]">
  <header class="fect-tabs__header" role="tablist" aria-orientation="horizontal">
    <div class="fect-tabs__highlight" style="transition-property: opacity;"></div>
    <div role="tab" class="fect-tabs__title">HTML</div>
    <div role="tab" class="fect-tabs__title fect-tabs__title--active">JS</div>
  </header>
  <!---->
  <div class="fect-tab" role="tabpanel" tabindex="0">JS</div>
</div>
`;
